--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,8 @@
 ---
-vpn_server: it.toyvpn.com
-vpn_PSK: toyvpn.com
-vpn_username: freeit
-vpn_password: 74158689
-vpn_local_cidr: 192.168.1.0/24
-vpn_mtu: 1410
-vpn_mru: 1410
+l2tp_ipsec_server_host: vpn.example.com
+l2tp_ipsec_PSK: pre_shared_key
+l2tp_ipsec_client_username: username
+l2tp_ipsec_client_password: password
+l2tp_ipsec_client_cidr: 192.168.1.0/24
+l2tp_ipsec_client_mtu: 1410
+l2tp_ipsec_client_mru: 1410
