--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,9 +3,9 @@
   service:
     name: "{{ item }}"
     state: restarted
-  with_items:
-    - ipsec
-    - xl2tpd
+  with_items: [ ipsec, xl2tpd ]
+  when: ansible_connection != 'docker'
 
 - name: reload daemon
   command: systemctl daemon-reload
+  when: ansible_connection != 'docker'
