--- a/tasks/rhel-7.yml
+++ b/tasks/rhel-7.yml
@@ -4,11 +4,10 @@
   copy:
     src: vpn-client.service
     dest: /etc/systemd/system/vpn-client.service
-    owner: root
-    group: root
     mode: 00644
   notify:
     - reload daemon
 
 - name: Ensure vpn-client is started and enabled to start at boot.
   service: name=vpn-client state=started enabled=yes
+  when: ansible_connection != 'docker'
